--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "ES2020",
     "module": "NodeNext",
     "moduleResolution": "nodenext",
+    "allowJs": true,
     "lib": [
       "es6"
     ],
