--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "vite": "^4.3.9"
   },
   "dependencies": {
+    "@handlebars/allow-prototype-access": "^1.0.5",
     "@types/express": "^4.17.17",
     "autoprefixer": "^10.4.14",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
+    "flowbite": "^1.6.6",
+    "handlebars": "^4.7.7",
     "mongoose": "^7.2.4",
     "nodemon": "^2.0.22",
     "postcss": "^8.4.24",
