add login & register view

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,13 +4,10 @@
     "module": "NodeNext",
     "moduleResolution": "nodenext",
     "allowJs": true,
-    "lib": [
-      "es6"
-    ],
+    "typeRoots": ["node_modules/@types", "./src/types"],
+    "lib": ["es6"],
     "outDir": "dist",
     "rootDir": "src"
   },
-  "include": [
-    "src/**/*"
-  ]
+  "include": ["src/**/*"]
 }
