--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "concurrently \"nodemon\" \"postcss ./src/css/style.scss -o ./src/public/style.css --watch\""
   },
   "devDependencies": {
+    "@types/express-session": "^1.17.7",
     "@types/node": "^20.3.1",
     "concurrently": "^8.2.0",
     "typescript": "^5.0.2",
@@ -14,10 +15,14 @@
   },
   "dependencies": {
     "@handlebars/allow-prototype-access": "^1.0.5",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "autoprefixer": "^10.4.14",
+    "bcrypt": "^5.1.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
+    "express-session": "^1.17.3",
     "flowbite": "^1.6.6",
     "handlebars": "^4.7.7",
     "mongoose": "^7.2.4",
