--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@types/express-session": "^1.17.7",
     "@types/node": "^20.3.1",
+    "@types/passport": "^1.0.12",
     "concurrently": "^8.2.0",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
@@ -27,6 +28,8 @@
     "handlebars": "^4.7.7",
     "mongoose": "^7.2.4",
     "nodemon": "^2.0.22",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "postcss": "^8.4.24",
     "postcss-cli": "^10.1.0",
     "pug": "^3.0.2",
