--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@handlebars/allow-prototype-access": "^1.0.5",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
+    "@types/uuid": "^9.0.2",
     "autoprefixer": "^10.4.14",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.3.1",
@@ -29,12 +30,14 @@
     "mongoose": "^7.2.4",
     "nodemon": "^2.0.22",
     "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "postcss": "^8.4.24",
     "postcss-cli": "^10.1.0",
     "pug": "^3.0.2",
     "sass": "^1.63.4",
     "tailwindcss": "^3.3.2",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "uuid": "^9.0.0"
   }
 }
